<resources>
  <string name="app_name">ICAN</string>
  <string name="prompt_user_name">نام کاربری</string>
  <string name="prompt_password">رمز عبور</string>
  <string name="action_sign_in">ورود</string>
  <string name="action_sign_in_short">Sign in</string>
  <string name="error_invalid_email">ایمیل شما نا معتبر است!</string>
  <string name="error_invalid_user_name">لطفا نام کاربری را صحیح وارد کنید!</string>
  <string name="error_invalid_password">طول رمز باید بیشتر از 5 کاراگتر باشد!</string>
  <string name="error_incorrect_password">رمز نا معتبر است!</string>
  <string name="prompt_server_url">آدرس سرور</string>
  <string name="error_incorrect_Url">آدرس نا معتبر است!</string>
  <string name="agree">تایید</string>
  <string name="ServerAccessDeniedTitle">مشکل در برقراری ارتباط با سرور</string>
  <string name="ServerAccessDeniedcontent">لطفا مجدد تلاش فرمایید</string>
  <string name="refresh">تلاش مجدد</string>
  <string name="close">بستن</string>
  <string name="WatingForNetwork">در انتظار شبکه…</string>
  <string name="WatingForConnecting">در حال اتصال…</string>
  <string name="Syncing">در حال به روز رسانی…</string>
  <string name="Syncing2">در حال به روز رسانی</string>
  <string name="Connected">متصل شد</string>
  <string name="NoAction"> </string>
  <string name="TitleBpms">BPMS</string>
  <string name="title_home">خانه</string>
  <string name="navigation_drawer_open">باز کردن منوی کشویی</string>
  <string name="navigation_drawer_close">بستن منوی کشویی</string>
  <string name="hint_subject">موضوع</string>
  <string name="hint_content_massage">متن پیام</string>
  <string name="title_data_syncing">در حال دریافت اطلاعات</string>
  <string name="subtitle_data_syncing">لطفا شکیبا باشید...</string>
  <string name="error_adapter_item_count">خطای Null در اطلاعات</string>
  <string name="IMAGE_PROVIDER">avida.ican.fileprovider</string>
  <string name="search_hint">جستجو…</string>
  <string name="success">تایید</string>
  <string name="cancel">لغو</string>
  <string name="title_user_and_role_main">اسامی</string>
  <string name="title_selects">لیست انتخابی</string>
  <string name="title_contacts">گیرندگان</string>
  <string name="delet_question">آیا با حذف این مورد موافق هستید؟</string>
  <string name="title_nav_home_inbox">کارتابل وارده</string>
  <string name="title_nav_home_message">پیام</string>
  <string name="editore_place_holder">با سلام</string>
  <string name="title_farzin_write_message">ایجاد پیام</string>
  <string name="title_farzin_reply_message">پاسخ به پیام</string>
  <string name="reply_message">پاسخ به پیام:</string>
  <string name="sender">فرستنده:</string>
  <string name="title_farzin_fwd_message">هدایت پیام</string>
  <string name="title_camera">دوربین</string>
  <string name="title_photo">عکس</string>
  <string name="title_video">فیلم</string>
  <string name="title_voice_recorder">ضبط صدا</string>
  <string name="title_file">فایل</string>
  <string name="hint_message_subject">موضوع پیام : </string>
  <string name="error_get_data_faild">مشکل در دریافت اطلاعات!</string>
  <string name="error_get_file_faild">مشکل در دریافت فایل!لطفا مجدد تلاش فرمایید.</string>
  <string name="error_cartable_document_content">قالب نامه با مشکل مواجه شده است!</string>
  <string name="message_sent_successfully">پیام با موفقیت ارسال شد.</string>
  <string name="error_invalid_minLen">طول داده وارده باید بیش از  2 کارکتر باشد!</string>
  <string name="error_empty_filed">لطفا فیلد مشخص شده را پر کنید!</string>
  <string name="error_empty_editor_filed">لطفا متن پیام خود را وارد کنید!</string>
  <string name="error_empty_recivers">لطفا گیرنده پیام را مشخص کنید!</string>
  <string name="hint_delete_item">حذف</string>
  <string name="tmpl_text">مقدار</string>
  <string name="wrong_to_connect_to_internet">مشکل در ارتباط با اینترنت</string>
  <string name="please_check_youre_internet_access">اتصال به اینترنت را بررسی کرده و دوباره تلاش کنید</string>
  <string name="newMessageFrom">پیام جدید از</string>
  <string name="newMessage">پیام جدید</string>
  <string name="NewMessageContent">پیام جدید</string>
  <string name="NewCartableDocument">مدرک جدید</string>
  <string name="set_message">پیام های ارسالی</string>
  <string name="receive_message">پیام های دریافتی</string>
  <string name="Group_Message">پیام گروهی</string>
  <string name="no_data">موردی وجود ندارد!</string>
  <string name="no_cartable_data">کارتابل شما خالی می باشد!</string>
  <string name="hint_cartable_unread_data">مدارک خوانده نشده کارتابل</string>
  <string name="no_cartable_unread_data">کارتابل خوانده نشده ای وجود ندارد!</string>
  <string name="TitleDetailMessage">جزییات پیام</string>
  <string name="Pin">افزودن به میانبر ها</string>
  <string name="unPin">حذف از میانبر ها</string>
  <string name="cartable_document">سند کارتابل</string>
  <string name="Cartable">کارتابل وارده</string>
  <string name="title_list_hamesh">لیست هامش</string>
  <string name="title_gardesh_madrak">گردش مدرک</string>
  <string name="title_zanjireh_madrak">زنجیره مدرک</string>
  <string name="referral_order">دستور ارجاع</string>
  <string name="hint_comission">ارجاع</string>
  <string name="hint_confirm">تایید</string>
  <string name="title_dar_ertebat">در ارتباط</string>
  <string name="title_peyvast">پیوست</string>
  <string name="title_peiro">پیرو</string>
  <string name="title_atf">عطف</string>
  <string name="TitleCartableDocumentDetail">مدرک</string>
  <string name="save">ذخیره</string>
  <string name="send">ارسال</string>
  <string name="upload">بارگذاری</string>
  <string name="title_drawing_view_edt">مخاطب</string>
  <string name="optical_pen_send_error">هیچ هامشی برای ارسال وجود ندارد!</string>
  <string name="error_no_data_for_upload">هیچ داده ای برای بارگذاری وجود ندارد!</string>
  <string name="title_dialog_optical_pen">هامش قلم نوری</string>
  <string name="showOpticalPenFile">نمایش هامش قلم نوری</string>
  <string name="private_discription">توضیح شخصی</string>
  <string name="title_erja">ارجاع</string>
  <string name="title_confirm_erja">تایید و ارجاع</string>
  <string name="wrong_to_load_document_actions">شما در حال حاظر قادر به انجام این کار نمی باشید!</string>
  <string name="title_document_content">مشاهده ی مدرک</string>
  <string name="title_all_cartable_document">کل مدارک کارتابل</string>
  <string name="title_new_cartable_document"> مدارک جدید کارتابل</string>
  <string name="title_all_unread_message">پیام های خوانده نشده</string>
  <string name="title_all_new_message">پیام های جدید</string>
  <string name="splash_view_title">گروه مهندسی آی کن</string>
  <string name="ican_url">www.ican.ir</string>
  <string name="title_remember_me">مرا به خاطر بسپار</string>
  <string name="page">صفحه ی</string>
  <string name="of">از</string>
  <string name="title_contact_us">تماس با ما</string>
  <string name="title_about_us">درباره ما</string>
  <string name="log_out">خروج از حساب کاربری</string>
  <string name="show_log">نمایش لاگ برنامه</string>
  <string name="title_setting">تنظیمات</string>
  <string name="delete_action">حذف با موفقیت انجام شد</string>
  <string name="server_acces_denied">سرور در دسترس نمی باشد!</string>
  <string name="document_send_successful">دستور ارجاع با موفقیت انجام شد.</string>
  <string name="document_confirm_successful">دستور تایید با موفقیت انجام شد.</string>
  <string name="work_flow_continue_successful">ادامه فرایند با موفقیت انجام شد.</string>
  <string name="send_opticalpen_successful">هامش شما با موفقیت ارسال شد.</string>
  <string name="the_command_was_placed_in_the_queue">دستور مورد نظر در صف ارسال قرار گرفت!</string>
  <string name="the_command_was_successful">دستور مورد نظر با موفقیت انجام شد.</string>
  <string name="rule_cancel">دستور لغو شد!</string>
  <string name="error_invalid_file">فایل انتخاب  شده معتبر نمی باشد.</string>
  <string name="error_erja_action_code_validate_p1">نوع عمل ارجاع برای</string>
  <string name="error_erja_action_code_validate_p2">را مشخص نمایید!</string>
  <string name="error_access_denied">نام کاربری یا رمز عبور شما صحیح نمی باشد!</string>
  <string name="title_question">آیا از انجام این عمل مطمئن هستید؟</string>
  <string name="title_question_confirm">آیا از تایید این مدرک مطمئن هستید؟</string>
  <string name="error_null_image">مشکل در پردازش تصویر!</string>
  <string name="shouldAllowexternalStoragePermision">برنامه نیاز به دسترسی به حافظه دستگاه را دارد تا شما بتوانید عکس، ویدئو و دیگر رسانه ها را دریافت و ارسال کنید.</string>
  <string name="noName">بی نام</string>
  <string name="receivers">دریافت کنندگان</string>
  <string name="error_can_not_display_file">برنامه ای برای نمایش این فایل یافت نشد!</string>
  <string name="loginUserOrPassInvalidError">Access Denied[3] !!!</string>
  <string name="invalidLoginError">Invalid Login</string>
  <string name="resetApp">برای ورود با این نام کاربری پایگاه داده محلی شما پاک می شود آیا مایل به ادامه کار هستید؟</string>
  <string name="session_time_out_message">نشست شما به پایان رسیده است.لطفا مجدد ورود نمایید!</string>
  <string name="document_content_number_title">نامه :</string>
  <string name="cartable_history_number_title">گردش :</string>
  <string name="title_import_cartable_setting">دریافت مدارک کارتابل وارده</string>
  <string name="title_message_setting">دریافت پیام</string>
  <string name="title_start_date">تاریخ شروع</string>
  <string name="title_action">نوع عمل</string>
  <string name="title_count_of_get_document">تعداد مدرک دریافتی</string>
  <string name="title_all_data">همه</string>
  <string name="TitleActivityDocumentSetting">تنظیمات دریافت داده ها</string>
  <string name="title_document_setting">تنظیمات مدرک</string>
  <string name="title_end_date">تاریخ پایان</string>
  <string name="title_frm_queue_message">پیام</string>
  <string name="title_manual_setting">تنظیمات دریافت اطلاعات</string>
  <string name="title_queue">صف های ارسال</string>
  <string name="title_automatic_setting">تنظیمات اتوماتیک</string>
  <string name="title_message_type">نوع پیام:</string>
  <string name="hint_subject2">موضوع :</string>
  <string name="hint_document_number">شماره مدرک :</string>
  <string name="hint_document_action">نوع عمل :</string>
  <string name="title_signature">امضاء مدرک</string>
  <string name="sign_document_successfull">مدرک شما با موفقیت امضاء شد.</string>
  <string name="NotAccessToSignature">شما مجوز امضا کردن را ندارید!</string>
  <string name="Hellow">سلام</string>
  <string name="downloadFiles">دریافت فایل ضمیمه</string>
  <string name="title_dialog_user_role">سمت ها</string>
  <string name="error_encript_to_sha1">خطا در رمزنگاری داده ها!</string>
  <string name="title_change_active_role">تغییر سمت</string>
  <string name="invalid_user_has_queue">اجازه تغییر سمت از شما گرفته شده است!جهت تغییر سمت لطفا صف های ارسالی سمت فعلی خود را خالی کنید!</string>
  <string name="title_confirm_operator">تایید</string>
  <string name="title_workflow_operator">ادامه فرایند</string>
  <string name="title_Append_operator">ارجاع</string>
  <string name="title_hamesh_optical_pen_operator">هامش قلم نوری</string>
  <string name="title_hamesh_operator">هامش </string>
  <string name="title_attach_file"> زنجیره مدرک </string>
  <string name="title_sign_operator">امضا</string>
  <string name="title_frm_operator_queue">عملگرهای مدرک</string>
  <string name="title_frm_create_document_queue">مدرک</string>
  <string name="hint_import_entity_number">شماره وارده :</string>
  <string name="hint_entity_number">شماره داخلی :</string>
  <string name="hint_count">تعداد :</string>
  <string name="activity_queue_stop_service">جهت کنترل بهتر صف ها سرویس های پس زمینه متوقف می گردد.</string>
  <string name="services_run">فعالیت سرویس های پس زمینه مجدد آغاز شد.</string>
  <string name="title_creat_document">ایجاد مدرک</string>
  <string name="title_privacy_setting">تنظیمات امنیتی</string>
  <string name="titleChatRoom">گفتگو سازمانی</string>
  <string name="workFlowResponse1">تایید</string>
  <string name="workFlowResponse0">رد</string>
  <string name="workFlowResponse_1">بازگشت</string>
</resources>