<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

  <group android:id="@+id/group_1">
    <item
        android:id="@+id/nav_create_document"
        android:icon="@drawable/ic_create_document"
        android:title="@string/title_creat_document"
        tools:ignore="HardcodedText" />
    <item
        android:id="@+id/nav_inbox"
        android:icon="@drawable/ic_nav_drawer_inbox"
        android:title="@string/title_nav_home_inbox"
        tools:ignore="HardcodedText" />
  </group>

  <group android:id="@+id/group_2">
    <item
        android:id="@+id/nav_queue"
        android:icon="@drawable/ic_queue_list"
        android:title="@string/title_queue"
        tools:ignore="HardcodedText" />
    <item
        android:id="@+id/nav_change_active_role"
        android:icon="@drawable/ic_change_role"
        android:title="@string/title_change_active_role"
        tools:ignore="HardcodedText" />
    <item
        android:id="@+id/nav_chat_room"
        android:icon="@drawable/ic_message_bubble"
        android:title="@string/titleChatRoom"
        android:visible="true"
        tools:ignore="HardcodedText" />

  </group>

  <group android:id="@+id/group_3">
    <item
        android:id="@+id/nav_get_data_setting"
        android:icon="@drawable/ic_setting_get_data"
        android:title="@string/title_manual_setting"
        tools:ignore="HardcodedText" />
    <item
        android:id="@+id/nav_automatic_setting"
        android:icon="@drawable/ic_setting"
        android:title="@string/title_automatic_setting"
        tools:ignore="HardcodedText" />
    <item
        android:id="@+id/nav_privacy_setting"
        android:icon="@drawable/ic_setting_privacy"
        android:title="@string/title_privacy_setting"
        tools:ignore="HardcodedText" />

    <item
        android:id="@+id/nav_help"
        android:icon="@drawable/ic_help"
        android:title="@string/title_contact_us"
        android:visible="false"
        tools:ignore="HardcodedText" />
    <item
        android:id="@+id/nav_about"
        android:icon="@drawable/ic_about_us"
        android:title="@string/title_about_us"
        android:visible="false"
        tools:ignore="HardcodedText" />

    <item
        android:id="@+id/nav_contact_us"
        android:icon="@drawable/ic_contact_us"
        android:title="@string/title_contact_us"
        android:visible="false"
        tools:ignore="HardcodedText" />
  </group>

  <item
      android:id="@+id/nav_log_out"
      android:icon="@drawable/ic_exit"
      android:title="@string/log_out"
      tools:ignore="HardcodedText" />

  <item
      android:id="@+id/nav_show_log"
      android:icon="@android:drawable/ic_dialog_info"
      android:title="@string/show_log"
      android:visible="false"
      tools:ignore="HardcodedText" />


</menu>
