<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home_inbox"
        android:icon="@drawable/ic_nav_home_inbox"
        android:title="@string/title_nav_home_inbox"/>
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_nav_home"
        android:title="@string/title_home"
        />

    <item
        android:id="@+id/navigation_message"
        android:icon="@drawable/ic_nav_home_message"
        android:title="@string/title_nav_home_message"
        />

  <!--  <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />-->

</menu>
