<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="avida.ican.Farzin.View.FarzinActivityLogin">

    <include layout="@layout/farzin_custome_toolbar" />

    <LinearLayout
        android:id="@+id/ln_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/padding_maximum">

            <LinearLayout
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <AutoCompleteTextView
                        android:id="@+id/edt_user_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_user_name"
                        android:imeOptions="actionNext"
                        android:inputType="textPersonName"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:text="900b" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edt_paasword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_password"
                        android:imeOptions="actionNext"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:text="11111" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edt_server_url"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_server_url"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionDone"
                        android:inputType="textUri"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:text="192.168.3.227" />

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/btn_sign_in"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@color/color_Info"
                    android:text="@string/action_sign_in"
                    android:textColor="@color/color_White"
                    android:textStyle="bold" />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</LinearLayout>
