<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margin_minimum"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@color/color_White"
      android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ln_radio_button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/margin_minimum"
        android:layout_weight="1"
        android:orientation="horizontal">

      <TextView
          style="@style/custom_Txt_Normal_style"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginRight="@dimen/margin"
          android:layout_weight="1"
          android:gravity="center|right"
          android:text="@string/workFlowResponse1"
          tools:ignore="NestedWeights,RtlHardcoded" />

      <ImageView
          android:id="@+id/img_radio_button1"
          style="@style/custom_ic_left_style"
          android:layout_width="21dp"
          android:layout_height="14dp"
          tools:ignore="ContentDescription" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ln_radio_button0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/margin_minimum"
        android:layout_weight="1"
        android:orientation="horizontal">

      <TextView
          style="@style/custom_Txt_Normal_style"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginRight="@dimen/margin"
          android:layout_weight="1"
          android:gravity="center|right"
          android:text="@string/workFlowResponse0"
          tools:ignore="RtlHardcoded" />

      <ImageView
          android:id="@+id/img_radio_button0"
          style="@style/custom_ic_left_style"
          android:layout_width="21dp"
          android:layout_height="14dp"
          tools:ignore="ContentDescription" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ln_radio_button_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/margin_minimum"
        android:layout_weight="1"
        android:orientation="horizontal">

      <TextView
          style="@style/custom_Txt_Normal_style"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginRight="@dimen/margin"
          android:layout_weight="1"
          android:gravity="center|right"
          android:text="@string/workFlowResponse_1"
          tools:ignore="RtlHardcoded" />

      <ImageView
          android:id="@+id/img_radio_button_1"
          style="@style/custom_ic_left_style"
          android:layout_width="21dp"
          android:layout_height="14dp"
          android:layout_marginTop="@dimen/margin_minimum"
          android:layout_marginBottom="@dimen/margin_minimum"
          tools:ignore="ContentDescription" />

    </LinearLayout>


  </LinearLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_gravity="bottom"
      android:gravity="bottom"
      android:orientation="horizontal"
      android:padding="@dimen/padding">

    <Button
        android:id="@+id/btn_ok"
        style="@style/custom_right_button_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:text="@string/success" />

    <Button
        android:id="@+id/btn_cancel"
        style="@style/custom_left_button_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/margin_minimum"
        android:layout_weight="0.5"
        android:text="@string/close" />
  </LinearLayout>
</LinearLayout>
