<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="3dp">

    <ImageView
        android:id="@+id/img_network_state"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:backgroundTint="#ff0000"
        android:gravity="center"
        android:padding="5dp"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/ic_network_disconnect"
        android:visibility="invisible"
        tools:ignore="UnusedAttribute" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wrong_to_connect_to_internet"
        style="@style/custom_Txt_Title_style"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt_desc"
        style="@style/custom_Txt_Sub_Title_style"
        android:layout_width="154dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:gravity="center"
        android:text="@string/please_check_youre_internet_access" />
    <ImageView
        android:id="@+id/img_refresh"
        android:layout_width="40dp"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/margin"
        app:srcCompat="@drawable/ic_refresh" />

    <com.wang.avi.AVLoadingIndicatorView
        android:id="@+id/avi_network_state"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="5dp"
        app:indicatorColor="@color/color_Danger"
        app:indicatorName="BallClipRotateMultipleIndicator" />

    <Button
        android:id="@+id/btn_exit"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:background="@color/color_Danger"
        android:text="@string/close"
        android:textColor="@color/color_White"
        android:textSize="14sp" />

</LinearLayout>
